# xmake-start

./: .gitignore  CMakeLists.txt  README.md  shell.nix  xmake.lua
src/: main.c  main.cpp
